--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-    
+    <main class="container">
+        <div class="left-column">
+            LEFT COLUMN
+        </div>
+        <div class="right-column">
+            RIGHT COLUMN
+        </div>
+    </main>
 </body>
+
 </html>
