--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign up</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -13,9 +13,32 @@
         <div class="left-column">
             LEFT COLUMN
         </div>
-        <div class="right-column">
-            RIGHT COLUMN
-        </div>
+            <div class="right-column">
+                <div class="close">x</div>            
+               <form>
+            <div class="form-row">
+                <label for="">Username
+                <input type="text"
+            </div>
+            <div class="form-row">
+                <label for="">E-mail
+                <input type="email"
+            </div>
+            <div class="form-row">
+                <label for="">Password
+                <input type="password"
+            </div>
+            <div class="form-row">
+                <label for="">Repeat password
+                <input type="password"
+            </div>        
+            <div class="form-row">
+                <button type="submit">Get started</button>
+                <span>or</span> 
+                <a href="#">Sign in</a>
+            </div>      
+        </form>  
+        
     </main>
 </body>
 
