--- a/index.html
+++ b/index.html
@@ -13,32 +13,33 @@
         <div class="left-column">
             LEFT COLUMN
         </div>
-            <div class="right-column">
-                <div class="close">x</div>            
-               <form>
+        <div class="right-column">
+            <div class="close">x
+            </div>            
+        <form>
             <div class="form-row">
-                <label for="">Username
-                <input type="text"
+                <label for="">Username</label>
+                <input type="text">
             </div>
             <div class="form-row">
-                <label for="">E-mail
-                <input type="email"
+                <label for="">E-mail</label>
+                <input type="email">
             </div>
             <div class="form-row">
-                <label for="">Password
-                <input type="password"
+                <label for="">Password</label>
+                <input type="password">
             </div>
             <div class="form-row">
-                <label for="">Repeat password
-                <input type="password"
+                <label for="">Repeat password</label>
+                <input type="password">
             </div>        
             <div class="form-row">
                 <button type="submit">Get started</button>
                 <span>or</span> 
                 <a href="#">Sign in</a>
             </div>      
-        </form>  
-        
+            </form>  
+        </div>
     </main>
 </body>
 
