--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
             </div>            
         <form>
             <div class="form-row">
-                <label for="">Username</label>
-                <input type="text">
+                <label for="username">Username</label>
+                <input id="username" type="text" placeholder="Username" required>
+            </div>  
+            <div class="form-row">
+                <label for="e-mail">E-mail</label>
+                <input id="e-mail" type="email" placeholder="E-mail" required>
             </div>
             <div class="form-row">
-                <label for="">E-mail</label>
-                <input type="email">
+                <label for="password">Password</label>
+                <input id="password" type="password" placeholder="Password" required>
             </div>
             <div class="form-row">
-                <label for="">Password</label>
-                <input type="password">
-            </div>
-            <div class="form-row">
-                <label for="">Repeat password</label>
-                <input type="password">
+                <label for="re-password">Repeat password</label>
+                <input id="re-password" type="password" placeholder="Password" required>
             </div>        
             <div class="form-row">
                 <button type="submit">Get started</button>
