left-column style update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 <body>
     <main class="container">
         <div class="left-column">
-            LEFT COLUMN
+            <h1 class="main-title">Sign up</h1>
+            <div class="links">
+                <a href="#">Privacy Policy</a>
+                <span>&</span>
+                <a href="#">Terms and Conditions</a>
+            </div>
+
         </div>
         <div class="right-column">
             <div class="close">x
