Login, sign-up, forgot password

--- a/sign in/index.html
+++ b/sign in/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
-    <div class="background"></div>
     <main class="container">
         <div class="left-column">
             <h1 class="main-title">Sign up</h1>
@@ -29,21 +28,13 @@
                 <input id="username" type="text" placeholder="Username" required>
             </div>  
             <div class="form-row">
-                <label for="e-mail">E-mail</label>
-                <input id="e-mail" type="email" placeholder="E-mail" required>
-            </div>
-            <div class="form-row">
                 <label for="password">Password</label>
                 <input id="password" type="password" placeholder="Password" required>
-            </div>
+            </div>      
             <div class="form-row">
-                <label for="re-password">Repeat password</label>
-                <input id="re-password" type="password" placeholder="Password" required>
-            </div>        
-            <div class="form-row">
-                <button type="submit">Get started</button>
+                <button type="submit">Login</button>
                 <span>or</span> 
-                <a href="./sign in/index.html">Sign in</a>
+                <a href="../css/forgot password/index.html">Forgot password?</a>
             </div>      
             </form>  
         </div>
