--- a/forgot password/index.html
+++ b/forgot password/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
@@ -22,27 +22,15 @@
         <div class="right-column">
             <div class="close">x
             </div>            
-        <form>
-            <div class="form-row">
-                <label for="username">Username</label>
-                <input id="username" type="text" placeholder="Username" required>
-            </div>  
+        <form>            
             <div class="form-row">
                 <label for="e-mail">E-mail</label>
                 <input id="e-mail" type="email" placeholder="E-mail" required>
-            </div>
+            </div>              
             <div class="form-row">
-                <label for="password">Password</label>
-                <input id="password" type="password" placeholder="Password" required>
-            </div>
-            <div class="form-row">
-                <label for="re-password">Repeat password</label>
-                <input id="re-password" type="password" placeholder="Password" required>
-            </div>        
-            <div class="form-row">
-                <button type="submit">Get started</button>
+                <button type="submit">Send password</button>
                 <span>or</span> 
-                <a href="./Login/index.html">Login</a>
+                <a href="../index.html">Sign up</a>
             </div>      
             </form>  
         </div>
